--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -1,3 +1,87 @@
-body{
-    background-color: lightblue;
+body {
+     font-family: 'Open Sans', sans-serif;
+font-family: 'Roboto', sans-serif;
 }
+
+
+html {
+     box-sizing: border-box;
+   }
+   *,
+   *:before,
+   *:after {
+     box-sizing: inherit;
+   }
+   
+   /*  --------------- Global Styles -----------------  */
+   
+   body{
+   font-family: 'Gabarito', sans-serif;
+   margin:0;  
+   }
+   
+   header.primary{
+   background-color:#3b638b;
+   color:#ffffff;
+   text-shadow: 1px 1px #000000;  
+   text-align:center;
+   padding:40px;
+   /*long form*/
+   padding-top: 40px;
+   padding-right: 40px;
+   padding-bottom: 40px;
+   padding-left: 40px; 
+   /* T,R,B,L */
+   padding: 20px 40px 20px 40px;  
+   /* Two Value Top/Bottom / L/R */
+   padding: 20px 40px;  
+   }
+   
+   header.primary h1 {
+     font-size:2.4rem;
+     margin:20px 0 0;
+   }
+   
+   header.primary h1 a{
+     color:#ffffff;
+     text-decoration:none;
+   }
+   
+   header.primary h2{
+     font-size:1.4rem;
+     margin:0;
+   }
+   
+   header.primary nav{
+    
+    max-width:900px;
+    margin:20px auto; 
+   }
+   
+   header.primary nav ul{
+     display:flex;
+     flex-direction:row;
+     justify-content:space-around;
+     padding:0;
+   }
+   
+   header.primary nav ul li{
+     list-style-type:none;
+   }
+   
+   header.primary nav ul li a {
+     color:#ffffff;
+     text-decoration:none;
+     background-color:#000000;
+     background-color:rgba(0,0,0,.5);
+     padding:5px 10px;
+     border:1px solid #696969;
+     border-radius:20px;
+     transition:.5s;
+   }
+   
+   header.primary nav ul li a:hover{
+     background-color:rgba(0,0,0,.8);
+   }
+   
+   
