--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -1,5 +1,4 @@
-
-  /* ------ Style for css-demo ----- */
+* ------ Style for css-demo ----- */
 
 
 
@@ -28,11 +27,42 @@ img{
   margin:40px auto;
 }
 
+.img-right{
+  float:right;
+  margin:10px 0 10px 20px;
+  border:5px double #c0c0c0;
+  padding:5px;
+  box-shadow: -4px 4px 1px rgba(0,0,0,.4);
+}
+
+.img-left{
+  float:left;
+  margin:10px 20px 10px 0;
+  border:5px double #c0c0c0;
+  padding:5px;
+  box-shadow: -4px 4px 1px rgba(0,0,0,.4);
+}
+
+.img-center{
+  display:block;
+  margin:20px auto;
+    border:5px double #c0c0c0;
+  padding:5px;
+  box-shadow: -4px 4px 1px rgba(0,0,0,.4);
+}
+
+
+
+
 /*  --------------- Global Styles -----------------  */
 
 body{
 font-family: 'Gabarito', sans-serif;
-margin:0;  
+margin:0;
+background-image:url("../img/header.jpeg");
+background-repeat:no-repeat;
+background-size:contain;
+background-position:200px;  
 }
 
 header.primary{
@@ -131,31 +161,78 @@ article.post figure{
   margin:0;
 }
 
-article.post time.post-date, article.post figcaption, article.post .post-meta{
+article.post time.post-date, article.post figcaption,
+article.post .post-meta
+{
   text-transform:uppercase;
   color:#c0c0c0;
 }
 
 article.post a{
-  color: #3b638b
-
+  color: #3b638b;
 }
 
 article.post a:hover{
-  text decoration:none;
+  text-decoration:none;
 }
-
 article.post img{
   border:1px solid #c0c0c0;
-  padding:2px 22px 20px 2px;
+  padding:2px;
   margin:10px auto;
-  background:#c0c0c0;
 }
+
+#practice h2{
+  color:#3b638b;
+  border-bottom:1px solid #c0c0c0;
+}
+
+
 
 
 aside[role="complementary"]{
-  color:red;
+  background-color: #172635;
+  color: #ffffff;
+  padding: 1.9rem;
 }
+
+aside .container{
+  display:flex;
+  flex-direction:row;
+  gap:40px;
+}
+
+aside .container a:last-of-type{
+  color:#ffffff;
+  display:block;
+  text-align:right;
+  font-size:.8rem;
+  margin-top:10px;
+}
+
+aside .container a{color:#ffffff;}
+
+aside footer{
+  display:none;
+}
+
+#colophon{
+  background-color:#3b638b;
+  padding:10px;
+  color:#fff;
+  text-align:center;
+}
+
+
+  
+
+
+
+
+
+
+
+
+
 
 
 
@@ -174,6 +251,15 @@ aside[role="complementary"]{
   header.primary nav ul a{
     display:block;
   }
+  #content, aside .container {
+    flex-direction:column;
+  }
+  
+  #content img{
+    display:block;
+    margin:auto;
+  }
+  
 }
 
 
