--- a/spacex-v1/assets/css/style.css
+++ b/spacex-v1/assets/css/style.css
@@ -32,7 +32,7 @@ html {
     background-color: #000000;
     text-align: center;
     color: #ffffff;
-    text-shadow: 2px 2px #000000;
+    text-shadow: 1px 1px #000000;
     padding: 8em 2em;
     position: relative;
   }
@@ -89,41 +89,41 @@ html {
   header.primary nav li {
     list-style-type: none;
     padding: 0;
-    width: 20%;
+    width: 22.5%;
   }
   
   header.primary nav a:link,
   header.primary nav a:visited {
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     background-color: #000000;
-    background-color: rgba(142, 166, 184, 0.4);
-    padding: 8px 16px;
-    border-radius: 10px;
-    transition: 0.6s;
+    background-color: rgba(142, 166, 184, 0.6);
+    padding: 12px 16px;
+    border-radius: 5px;
+    transition: 0.7s;
     display: block;
   }
   
   header.primary nav a:hover,
   header.primary nav a:active {
-    background-color: rgba(0, 0, 0, 1);
+    background-color: rgb(255, 255, 255);
   }
   
   /* ------------- Content --------------- */
   section#content {
-    padding: 4em 0;
+    padding: 3em 0;
   }
   
   section#content h2 {
     font-family: "Goldman", cursive;
-    font-size: 2.2em;
-    color: #33536b;
+    font-size: 3em;
+    color: #000000;
     text-align: center;
   }
   
   /* ------------- Articles --------------- */
   section#articles {
-    background: #181c1f;
+    background: #000000;
   }
   
   section#articles .container {
@@ -131,14 +131,14 @@ html {
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
-    border-bottom: 1px solid #c0c0c0;
+    border-bottom: 10px solid #ffffff;
     padding: 0 0 4em 0;
   }
   
   section#articles h2,
   #content h2 {
     flex: 0 0 100%;
-    color: #33536b;
+    color: #ffffff;
     text-align: center;
     font-family: "Goldman", cursive;
     font-size: 2em;
@@ -204,15 +204,15 @@ html {
   
   /* ------------- Aside --------------- */
   aside[role="complementary"] {
-    background-color: #181c1f;
+    background-color: #000000;
     color: #ffffff;
-    padding: 2.5em;
+    padding: 1em;
   }
   
   aside .container {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: row-reverse;
+    justify-content: space-evenly;
   }
   
   aside article.widget {
@@ -252,11 +252,11 @@ html {
   
   /*------ Footer ------*/
   footer#colophon {
-    background-color: #1b2c38;
+    background-color: #000000;
   }
   
   #colophon h6 {
-    padding: 20px;
+    padding: 15px;
     margin: 0;
     color: #fff;
     text-align: center;
@@ -316,6 +316,6 @@ html {
   
     header.primary nav ul li {
       margin-bottom: 10px;
-      width
+      width:auto;
     }
   }
